# mlb_predictor_engine_v2

./: .cursorignore  .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  AUDIT_REPORT_V2.md  MLB_DATABASE_INTEGRATION_REPORT.md  README.md  V3_MILESTONE2_BLUEPRINT.md  docker-compose.yml  legends_sports_revision_report.md  milestone_3_roadmap_tr.md  milestone_4_roadmap_tr.md  milestone_5_roadmap_tr.md  multi_sport_wrapper_roadmap.md  project_evaluation_report.md  render.yaml  run_pipeline.ps1  setup_scheduler.ps1  tennis_model_evaluation_report.md  tyler_client_roadmap.md  tyler_roadmap_report.md  vercel.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  K Model.ods  check_scraper.py  inspect_model_math.py  inspect_predictions.py  inspect_todays_odds.py  pyproject.toml  run_daily_pipelines.py  test_lineups_logic.py  test_mlb_history.py  test_odds.py  test_pitcher_k_model.py
backend/app/: main.py  test.py
backend/app/api/v1/: api.py  mlb.py  tennis.py  wnba.py
backend/app/core/: config.py  lifespan.py  runtime_env.py  scheduler.py
backend/app/data/: ballpark_stats.json  team_mappings.json
backend/app/data/history/: 2026-05-13_pitchers.json  2026-05-13_stats.json
backend/app/models/: f5_model.py  mlb_model.py  nrfi_model.py  pitcher_k_model.py  schemas.py
backend/app/services/: data_collector.py  matchup_scraper.py  mlb_unified_engine.py  oddlyspecific_scraper.py  odds_provider.py  pitcher_props_engine.py  pitcher_scraper.py  prediction_runner.py  weather_scraper.py
backend/app/services/ai/: base.py  factory.py  gemini.py  groq.py
(+9483 files in other folders)
