[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "fastapi>=0.136.1",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.0",
    "uvicorn>=0.46.0",
]
