[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "fastapi>=0.136.1",
    "google-genai>=2.4.0",
    "groq>=1.2.0",
    "httpx>=0.28.1",
    "pybaseball>=2.2.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.0",
    "uvicorn>=0.46.0",
]
